chandeliers-lus/tests/fail/ui/causality/redef-var-ii.rs
chandeliers_lus::decl! {
    node foo(a, a : int) returns ();
    let tel
}

fn main() {}
