chandeliers-lus/tests/fail/ui/causality/redef-var-ii.stderr
error: Variable a is declared twice in node foo
 --> tests/fail/ui/causality/redef-var-ii.rs:2:17
  |
2 |     node foo(a, a : int) returns ();
  |                 ^
